NetBSD Problem Report #55602

From abs@absd.org  Sun Aug 23 23:04:28 2020
Return-Path: <abs@absd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 896911A923A
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 23 Aug 2020 23:04:28 +0000 (UTC)
Message-Id: <20200823215211.16C924360D@iris.absd.org>
Date: Sun, 23 Aug 2020 22:52:11 +0100 (BST)
From: abs@absd.org
Reply-To: abs@absd.org
To: gnats-bugs@NetBSD.org
Subject: zpool panic on mounting zfs filesystem
X-Send-Pr-Version: 3.95

>Number:         55602
>Category:       kern
>Synopsis:       zpool panic on mounting zfs filesystem
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 23 23:05:00 +0000 2020
>Closed-Date:    Sat Aug 29 08:00:08 +0000 2020
>Last-Modified:  Sat Aug 29 08:00:08 +0000 2020
>Originator:     David Brownlee
>Release:        NetBSD 9.0_STABLE
>Organization:

>Environment:
System: NetBSD iris.absd.org 9.0_STABLE NetBSD 9.0_STABLE (GENERIC) #0: Thu Aug 20 16:16:33 UTC 2020 mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:

System panics on mounting a zpool - whether as part of "zpool create" 
or "zpool import"

Specifying a different mount point "zpool create -m /var/obj test /dev/wd0"
does not help.

No panic occurs if the system is booted to single user, "mount /" is run 
and then "zpool create test /dev/wd0".

The panic _does_ occur if the system is booted to multi user, then shutdown
to single user, "umount -va" is run and then "zpool create test /dev/wd0"

A 9.99.71 kernel & modules from nyftp via the "boot to multiuser then
shutdown before testing" also panics

Sample stacktrace (from 9)

vpanic() at netbsd:vpanic+0x160
snprintf() at netbsd:snprintf
startlwp() at netbsd:startlwp
alltraps() at netbsd:alltraps+0xbb
fstrans_start() at netbsd:fstrans_start+0x64
VOP_LOCK() at netbsd:VOP_LOCK+0x52
vn_lock() at netbsd:vn_lock+0x11
secmodel_extension_system_cb() at netbsd:secmodel_extensions_system_cb+0x70
kauth_authorize_action() at netbsd:kauth_authorize_action+0xa?
kauth_authorize_system() at netbsd:kauth_authorize_system+0x2?
zfs_mount() at zfs:zfs_mount+0xcf
VFS_MOUNT() at netbsd:VFS_MOUNT+0x4d
mount_domount() at netbsd:mount_domount+0xdf
do_sys_mount() at netbsd:do_sys_mount+0x580  

>How-To-Repeat:
zpool create test /dev/wd0
>Fix:

>Release-Note:

>Audit-Trail:
From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55602 CVS commit: src/external/cddl/osnet/sys/kern
Date: Fri, 28 Aug 2020 16:13:48 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Fri Aug 28 16:13:48 UTC 2020

 Modified Files:
 	src/external/cddl/osnet/sys/kern: policy.c

 Log Message:
 Glue operation secpolicy_fs_mount() passes wrong arguments to
 operation kauth_authorize_system().

 KAUTH_SYSTEM_MOUNT / KAUTH_REQ_SYSTEM_MOUNT_NEW wants the to be
 covered vnode and the mount flags, not the mount structure.

 Fix for PR kern/55602: zpool panic on mounting zfs filesystem


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/external/cddl/osnet/sys/kern/policy.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Fri, 28 Aug 2020 16:35:03 +0000
State-Changed-Why:
Fixed on head -- Pullup requested, pullup-9 #1066


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55602 CVS commit: [netbsd-9] src/external/cddl/osnet/sys/kern
Date: Fri, 28 Aug 2020 18:17:13 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Aug 28 18:17:13 UTC 2020

 Modified Files:
 	src/external/cddl/osnet/sys/kern [netbsd-9]: policy.c

 Log Message:
 Pull up following revision(s) (requested by hannken in ticket #1066):

 	external/cddl/osnet/sys/kern/policy.c: revision 1.9

 Glue operation secpolicy_fs_mount() passes wrong arguments to
 operation kauth_authorize_system().

 KAUTH_SYSTEM_MOUNT / KAUTH_REQ_SYSTEM_MOUNT_NEW wants the to be
 covered vnode and the mount flags, not the mount structure.

 Fix for PR kern/55602: zpool panic on mounting zfs filesystem


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.7.4.1 src/external/cddl/osnet/sys/kern/policy.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Sat, 29 Aug 2020 08:00:08 +0000
State-Changed-Why:
Pullup done.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.